--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>sql-init</module>
+        <module>dynamic-data-source</module>
     </modules>
 
     <properties>
