添加aop-parameter-name

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>sql-init</module>
         <module>dynamic-data-source</module>
+        <module>aop-parameter-name</module>
     </modules>
 
     <properties>
