--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>sql-init</module>
         <module>dynamic-data-source</module>
         <module>aop-parameter-name</module>
+        <module>custom-starter</module>
     </modules>
 
     <properties>
