--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>dynamic-data-source</module>
         <module>aop-parameter-name</module>
         <module>custom-starter</module>
+        <module>custom-scan</module>
     </modules>
 
     <properties>
