--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>aop-parameter-name</module>
         <module>custom-starter</module>
         <module>custom-scan</module>
+        <module>yaml-include</module>
     </modules>
 
     <properties>
