--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>custom-scan</module>
         <module>yaml-include</module>
         <module>redis-json</module>
+        <module>spring-boot-test</module>
     </modules>
 
     <properties>
